Fix z-index

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -273,6 +273,7 @@ body {
     transition-duration: 86ms;
     transform: translateY(-5px);
     transition-property: opacity, transform;
+    z-index: 999;
   }
 
   .navbar-dropdown.lg {
